[package]
name = "sliv"
version = "0.1.0"
edition = "2024"
authors = ["Andreas Leitner <leitner.andi@googlemail.com>"]
description = "Sliv is a \"Simple Lightweight Integer Visualization\" tool for the console"
repository = "https://github.com/Hengoo/Sliv"
readme = "readme.md"
categories = ["command-line-utilities", "Visualization"]
keywords = ["binary", "hex", "cli", "terminal"]
exclude = [".github/*"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.100"
# We don't need fancy image features from clipboard
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control", "windows-sys"]}
crossterm = { version = "0.29.0", features = ["osc52"] }
